--- a/openhcl/underhill_mem/Cargo.toml
+++ b/openhcl/underhill_mem/Cargo.toml
@@ -9,7 +9,6 @@ rust-version.workspace = true
 [target.'cfg(target_os = "linux")'.dependencies]
 guestmem = { workspace = true, features = ["bitmap"] }
 hcl.workspace = true
-hv1_structs.workspace = true
 hvdef.workspace = true
 memory_range.workspace = true
 underhill_threadpool.workspace = true
@@ -19,6 +18,7 @@ vm_topology.workspace = true
 x86defs.workspace = true
 
 cvm_tracing.workspace = true
+tracelimit.workspace = true
 inspect.workspace = true
 pal_async.workspace = true
 sparse_mmap.workspace = true
