--- a/openhcl/underhill_core/Cargo.toml
+++ b/openhcl/underhill_core/Cargo.toml
@@ -40,6 +40,7 @@ vnc_worker_defs.workspace = true
 chipset.workspace = true
 chipset_device.workspace = true
 chipset_device_resources.workspace = true
+chipset_device_worker.workspace = true
 closeable_mutex.workspace = true
 profiler_worker = { workspace = true, optional = true }
 chipset_legacy.workspace = true
